--- a/src/editor/EditorWindow.ui
+++ b/src/editor/EditorWindow.ui
@@ -40,7 +40,7 @@
     <property name="title">
      <string>Help</string>
     </property>
-    <addaction name="actionAbout_2"/>
+    <addaction name="actionAbout"/>
     <addaction name="actionShortcuts"/>
    </widget>
    <addaction name="menuFile"/>
@@ -100,11 +100,6 @@
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
-   </property>
-  </action>
-  <action name="actionAbout_2">
-   <property name="text">
-    <string>About</string>
    </property>
   </action>
   <action name="actionShortcuts">
