--- a/src/icons.qrc
+++ b/src/icons.qrc
@@ -1,41 +1,40 @@
 <RCC>
-    <qresource prefix="/icons-dark">
-        <file alias="audio-on">icons/icons-dark/status/16/audio-on.svg</file>
-        <file alias="audio-off">icons/icons-dark/status/16/audio-volume-muted.svg</file>
-        <file alias="visible">icons/icons-dark/actions/16/view-visible.svg</file>
-        <file alias="select">icons/icons-dark/actions/16/edit-select.svg</file>
-        <file alias="loop">icons/icons-dark/actions/16/media-playlist-repeat.svg</file>
-        <file alias="measure">icons/icons-dark/actions/16/measure.svg</file>
-        <file alias="select-rect">icons/icons-dark/actions/16/select-rectangular.svg</file>
-        <file alias="invisible">icons/icons-dark/actions/16/view-hidden.svg</file>
-        <file alias="pause">icons/icons-dark/actions/16/media-playback-pause.svg</file>
-        <file alias="play">icons/icons-dark/actions/16/media-playback-start.svg</file>
-        <file alias="stop">icons/icons-dark/actions/16/media-playback-stop.svg</file>
-        <file alias="save">icons/icons-dark/actions/16/document-save.svg</file>
-        <file alias="last">last-icon.svg</file>
-        <file alias="repeat">repeat-icon.svg</file>
-        <file alias="up">icons/icons-dark/actions/16/go-up.svg</file>
-        <file alias="down">icons/icons-dark/actions/16/go-down.svg</file>
+    <qresource prefix="/icons/dark">
+        <file alias="audio-on">icons/dark/audio-on.svg</file>
+        <file alias="visible">icons/dark/view-visible.svg</file>
+        <file alias="select">icons/dark/edit-select.svg</file>
+        <file alias="loop">icons/dark/media-playlist-repeat.svg</file>
+        <file alias="measure">icons/dark/measure.svg</file>
+        <file alias="save">icons/dark/document-save.svg</file>
+        <file alias="up">icons/dark/go-up.svg</file>
+        <file alias="down">icons/dark/go-down.svg</file>
     </qresource>
-    <qresource prefix="/icons">
-        <file alias="audio-on">icons/icons/status/16/audio-on.svg</file>
-        <file alias="audio-off">icons/icons/status/16/audio-volume-muted.svg</file>
-        <file alias="visible">icons/icons/actions/16/view-visible.svg</file>
-        <file alias="select">icons/icons/actions/16/edit-select.svg</file>
-        <file alias="loop">icons/icons/actions/16/media-playlist-repeat.svg</file>
-        <file alias="measure">icons/icons/actions/16/measure.svg</file>
-        <file alias="select-rect">icons/icons/actions/16/select-rectangular.svg</file>
-        <file alias="invisible">icons/icons/actions/16/view-hidden.svg</file>
-        <file alias="pause">icons/icons/actions/16/media-playback-pause.svg</file>
-        <file alias="play">icons/icons/actions/16/media-playback-start.svg</file>
-        <file alias="stop">icons/icons/actions/16/media-playback-stop.svg</file>
-        <file alias="save">icons/icons/actions/16/document-save.svg</file>
-        <file alias="last">last-icon.svg</file>
-        <file alias="repeat">repeat-icon.svg</file>
-        <file alias="up">icons/icons/actions/16/go-up.svg</file>
-        <file alias="down">icons/icons/actions/16/go-down.svg</file>
+    <qresource prefix="/icons/tan">
+        <file alias="audio-on">icons/tan/audio-on.svg</file>
+        <file alias="visible">icons/tan/view-visible.svg</file>
+        <file alias="select">icons/tan/edit-select.svg</file>
+        <file alias="loop">icons/tan/media-playlist-repeat.svg</file>
+        <file alias="measure">icons/tan/measure.svg</file>
+        <file alias="save">icons/tan/document-save.svg</file>
+        <file alias="up">icons/tan/go-up.svg</file>
+        <file alias="down">icons/tan/go-down.svg</file>
+    </qresource>
+    <qresource prefix="/icons/light">
+        <file alias="audio-on">icons/light/audio-on.svg</file>
+        <file alias="visible">icons/light/view-visible.svg</file>
+        <file alias="select">icons/light/edit-select.svg</file>
+        <file alias="loop">icons/light/media-playlist-repeat.svg</file>
+        <file alias="measure">icons/light/measure.svg</file>
+        <file alias="save">icons/light/document-save.svg</file>
+        <file alias="up">icons/light/go-up.svg</file>
+        <file alias="down">icons/light/go-down.svg</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="images">images.png</file>
+    </qresource>
+    <qresource prefix="/icons/color">
+        <file alias="play">icons/color/play-icon.svg</file>
+        <file alias="pause">icons/color/pause-icon.svg</file>
+        <file alias="stop">icons/color/stop-icon.svg</file>
     </qresource>
 </RCC>
