--- a/src/editor/sidemenu/SideMenu.ui
+++ b/src/editor/sidemenu/SideMenu.ui
@@ -372,6 +372,9 @@
        </item>
        <item>
         <widget class="QPushButton" name="watchBtn">
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="text">
           <string>Watch</string>
          </property>
