fix recording, also remember last file

--- a/src/editor/HostDialog.ui
+++ b/src/editor/HostDialog.ui
@@ -39,7 +39,7 @@
    <item>
     <widget class="QGroupBox" name="saveRecordingGroup">
      <property name="title">
-      <string>Save Recording</string>
+      <string>Record Session</string>
      </property>
      <property name="flat">
       <bool>false</bool>
