add icon as window icon

--- a/src/editor/EditorWindow.ui
+++ b/src/editor/EditorWindow.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>pxtone collab</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../icons.qrc">
+    <normaloff>:/favicon/icon</normaloff>:/favicon/icon</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget"/>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -114,6 +118,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
