--- a/style.css
+++ b/style.css
@@ -38,7 +38,18 @@ h1,h2,h3,h4,h5,h6{
   margin-bottom:15px;
 }
 
-.text > p { margin:0; }
+.text > p:first-child { margin-top:0; }
+.text > p:last-child { margin-bottom:0; }
 
 a { color: #D2CA9C; }
 a:hover { color: #DED9BB; }
+
+.download-list {
+  display:flex;
+  align-items:stretch;
+  margin:10px 0;
+}
+
+.download-list > div {
+  flex: 1
+}
