--- a/src/editor/EditorWindow.ui
+++ b/src/editor/EditorWindow.ui
@@ -38,7 +38,6 @@
     <addaction name="actionSave"/>
     <addaction name="actionSaveAs"/>
     <addaction name="separator"/>
-    <addaction name="actionStyle"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
@@ -48,7 +47,16 @@
     <addaction name="actionAbout"/>
     <addaction name="actionShortcuts"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionIncrease_font_size"/>
+    <addaction name="actionDecrease_font_size"/>
+    <addaction name="actionStyle"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuView"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -126,6 +134,29 @@
    </property>
    <property name="text">
     <string>Use custom style</string>
+   </property>
+  </action>
+  <action name="actionIncrease_font_size">
+   <property name="text">
+    <string>Increase font size</string>
+   </property>
+  </action>
+  <action name="actionDecrease_font_size">
+   <property name="text">
+    <string>Decrease font size</string>
+   </property>
+  </action>
+  <action name="actionDark_piano_roll">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Dark piano roll</string>
+   </property>
+  </action>
+  <action name="actionAuto_add_unit">
+   <property name="text">
+    <string>Auto-add unit</string>
    </property>
   </action>
  </widget>
