--- a/src/editor/EditorWindow.ui
+++ b/src/editor/EditorWindow.ui
@@ -37,6 +37,7 @@
     <addaction name="separator"/>
     <addaction name="actionSave"/>
     <addaction name="actionSaveAs"/>
+    <addaction name="actionRender"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
@@ -175,6 +176,11 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+P</string>
+   </property>
+  </action>
+  <action name="actionRender">
+   <property name="text">
+    <string>Render</string>
    </property>
   </action>
  </widget>
